fix articles clipping and popup cancel redirecting

--- a/src/styles/Articles.css
+++ b/src/styles/Articles.css
@@ -12,7 +12,7 @@
   border-radius: 5px;
   border: 1px solid;
   width: 60vw;
-  height: 65vh;
+  height: 62vh;
   display: flex;
   flex-direction: column;
   align-items: center;
